<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textConstIPServer"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:labelFor="@id/host"/>
    <EditText
        android:inputType="text"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:id="@+id/host"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        android:layout_marginStart="10sp"
        android:layout_marginTop="5sp"
        android:autofillHints=""/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textBtnConnect"
        app:layout_constraintLeft_toRightOf="@id/host"
        app:layout_constraintTop_toBottomOf="@id/textView"
        android:layout_marginStart="10sp"
        android:id="@+id/connect"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/result"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/host"
        android:layout_marginStart="10sp"/>
    <LinearLayout
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result"
        android:orientation="horizontal"
        android:id="@+id/pompControl">
        <TextView
            android:id="@+id/checkStatusPomp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pompIsOff"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/changeStatusPomp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changePompAutoToOn"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/autonomControl"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pompControl">
        <TextView
            android:id="@+id/checkStatusAuto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autoIsOff"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/changeStatusAuto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changePompAutoToOn"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>